--- a/app/views/new/templates/_templates.html.erb
+++ b/app/views/new/templates/_templates.html.erb
@@ -17,7 +17,7 @@
                   <h1 class="heading-text"></h1>
                   <span class="pull-right mb-2">
                     <%= link_to 'Add Template', new_new_template_path, class: "btn btn-primary notice-preview", remote: true %>
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#uploadTemplatesModal">
                       <i class='far fa-file-alt' aria-hidden='true'></i> Upload Templates
                     </button>
                     <%= link_to "<i class='fas fa-cloud-download-alt' aria-hidden='true'></i> Download Templates".html_safe, download_notices_new_templates_path, class: "btn btn-primary download-notices" %>
@@ -55,21 +55,23 @@
   </div>
 </div>
 
+
 <!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
+<div class="modal fade" id="uploadTemplatesModal" tabindex="-1" aria-labelledby="uploadTemplatesModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Upload Notices</h4>
+        <h5 class="modal-title" id="uploadTemplatesModalLabel">Upload Notices</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
+
       <%= form_tag(upload_notices_new_templates_path, multipart: true, method: :post) do %>
       <div class="modal-body">
         <%= file_field_tag :file %>
       </div>
 
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-default" data-bs-dismiss="modal">Close</button>
         <%= submit_tag 'Upload', class: 'btn btn-primary', disabled: false %>
       </div>
       <% end %>
