--- a/app/views/new/templates/_form.html.erb
+++ b/app/views/new/templates/_form.html.erb
@@ -16,7 +16,7 @@
   </div>
 </div>
 
-<div class="row g-2">
+<div class="row">
   <div class="col-sm col-md-12 col-lg-6 mb-3">
     <%= f.fields_for :subscriber do |subscriber_form| %>
       <%= f.label :subscriber, "Template Trigger Event", class: 'form-label' %>
@@ -45,8 +45,17 @@
 </div>
 
 <div class="row">
-  <div class="col-sm col-md-12 col-lg-12 mb-3">
+
+  <% recipients = Services::NoticeKindService.new(template.marketplace).recipients %>
+
+  <div class="col-sm col-md-12 col-lg-6 mb-3">
+    <%= f.label :recipient, "Recipient", class: 'form-label' %>
+    <%= f.select(:recipient, options_for_select(recipients.inject([]) {|options, (k, v)| options << [k, v]}, selected: template.recipient), { include_blank: false }, { :class => 'form-select'} ) %>
+  </div>
+
+  <div class="col-sm col-md-12 col-lg-6 mb-3">
     <%= f.label :published_at, "Published On", class: 'form-label' %>
       <%= f.text_field :published_at, id: "published_on", class: "form-control" %>
   </div>
+
 </div>
