--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -9,7 +9,18 @@
   </div>
 <% end %>
 
-<div class="content landing">  
+
+<div class="row col-md-offset-1">
+  <h4>Hello, <%=@user['name'] %></h4>
+</div>
+<div class="row col-md-offset-1">
+  <div class="col-md-5">
+    <%= link_to("Logout", session_logout_path, method: :delete) %>
+  </div>
+</div>
+
+
+<div class="content landing">
   <div class="home">
 
     <div class="tab-row">
