--- a/app/views/shared/header_ivl.html.erb
+++ b/app/views/shared/header_ivl.html.erb
@@ -31,7 +31,7 @@
               continue;
             }
           }
-        y[j].textContent = "Page "+(vars[x[i]])+ " of " + (vars[x[1]]);
+        y[j].textContent = "Page "+(vars[x[i]])+ " of " + (vars[x[1]]) + " ";
         }
       }
     }
