--- a/app/views/layouts/_nav_links.html.erb
+++ b/app/views/layouts/_nav_links.html.erb
@@ -7,6 +7,6 @@
       <%= link_to 'Sign In', new_account_session_path, class: 'nav-link' %>
     </li>
     <li class="nav-item active">
-      <%= link_to 'Sign Up', new_account_registration_path, class: 'nav-link' %>
+      <%= link_to 'Sign Up', new_account_registration_path, hidden:true, class: 'nav-link' %>
     </li>
     <% end %>
