fix issue with footer verbiage

--- a/app/views/shared/footer_ivl.html.erb
+++ b/app/views/shared/footer_ivl.html.erb
@@ -54,7 +54,7 @@
     <% else %>
       <tr>
         <td style="padding:3px 10px; font-size:8px;" align="center">
-          Questions? Call <%= Settings.site.short_name %> at <%= Settings.contact_center.contact_center_number_for_display %>, or go to <%= Settings.site.policies_url %>.
+          Questions? Call <%= Settings.site.short_name %> at <%= Settings.contact_center.contact_center_number_for_display %>, or go to <%= Settings.site.short_url %>.
         </td>
       </tr>
     <% end %>
