--- a/app/views/shared/_table.html.erb
+++ b/app/views/shared/_table.html.erb
@@ -1,15 +1,15 @@
-  <div style="display:block; page-break-inside: avoid;">
+  <div style="display:block;">
     <table align="center" class="total_table carrier_table household_member_details reports_table" style="width: <%= table_width if defined? table_width %>;" border="1">
       <tbody>
         <% if defined?(headers) %>
-        <tr style="text-align:center; background-color:rgb(198,217,241); padding:0 10px;">
+        <tr style="text-align:center; background-color:rgb(198,217,241); padding:0 10px; page-break-inside: avoid;">
           <% headers.size.times do |i| %>
           <td style="width: <%= col_styles[i] if defined? col_styles %>;"><%= headers[i]%></td>
           <% end %>
         </tr>
         <% end %>
         <% rows.each do |row| %>
-        <tr>
+        <tr style="page-break-inside: avoid;">
           <% row.size.times do |i| %>
             <td style="<%= col_styles[i] if defined? col_styles %>"><%= row[i] %></td>
           <% end %>
