--- a/app/views/new/templates/_form.html.erb
+++ b/app/views/new/templates/_form.html.erb
@@ -59,3 +59,9 @@
   </div>
 
 </div>
+
+<div class="row">
+  <%= f.label :paper_communication_override, "Guarantee paper notice?", class: 'form-label', title: "This will ensure a paper notice is generated irrespective of user defined preferences." do %>
+    <%= f.check_box(:paper_communication_override ) %> Create paper notice
+  <% end %>
+</div>
