--- a/app/views/shared/footer_ivl.html.erb
+++ b/app/views/shared/footer_ivl.html.erb
@@ -47,7 +47,7 @@
   <table class="footer-section" style="color: #333333;" width="100%" border="0">
     <tr>
       <td style="padding:3px 10px; font-size:8px;" align="center">Questions? <br>
-      Go to www.CoverME.gov or call <%= contact_center_short_number %>
+      Go to www.IdeaCrewDemo.gov or call <%= contact_center_short_number %>
       </td>
     </tr>
   </table>
